--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "kabal-backend"
 version = "0.1.0"
 description = "Backend for Sephirot attribution"
 authors = ["Avroumi"]
-packages = []
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -13,3 +12,6 @@ gunicorn = "^21.2.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.package]
+package-mode = false
